fix spacing

--- a/assets/css/security.css
+++ b/assets/css/security.css
@@ -7,16 +7,6 @@
   margin-top: 50px;
   margin-bottom: 48px;
 }
-
-a {
-  text-decoration: none;
-  display: inline-block;
-  padding: 8px 16px;
-}
-  
-.previous {
-  color: black;
-}
   
 .next {
   background-color: #4CAF50;
@@ -42,7 +32,7 @@ p{
 .btn-primary{
   background-color:#256EFF;
   color:white;
-  font-family:roboto, sans-serif;
+  font-family:'Roboto', sans-serif;
   border-color:#256EFF;
   border-radius: 8px;
   justify-content: center;
@@ -80,5 +70,12 @@ h2{
     position: absolute;
     bottom: 0;
     width: 100%;
+  }
+}
+
+
+@media only screen and (max-width: 600px) {
+  h2 {
+    margin-top: 32px;
   }
 }
